app/styles/views/_home.scss
/* ... */
#tours {
  position: relative;
  background-image: url("../images/background2.png");
  min-height: 500px;
  padding: {
    top: 80px;
    left: 16px;
    right: 16px;
    bottom: 64px;
  }
  @media screen and (max-width: 767px) {
    padding: 64px 16px;
  }
  .tours-list {
    margin-top: 80px;
    .tour-card {
      background-color: white;
      width: 100%;
    }
    .owl-nav {
      margin-top: 20px;
      font-size: 35px;
      display: flex;
      justify-content: space-between;
      color: $color_blue;
      > div {
        opacity: 0.6;
        transition: 0.3s linear;
        &:hover {
          opacity: 1;
        }
      }
    }
  }
  .more {
    text-align: center;
    margin-top: 40px;
    a {
      font-family: $font_roboto;
      color: #7c7c7c;
      font-weight: bold;
      line-height: 1.2;
      text-align: center;
      text-transform: uppercase;
      display: inline-block;
      border: 2px solid #7c7c7c;
      padding: 10px 35px;
      border-radius: 26px;
      font-size: 19px;
      transition: 0.3s linear;
      &:hover {
        color: white;
        background-color: #7c7c7c;
      }
    }
  }
  &:after {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: #f7f8f8;
    z-index: -1;
  }
}

#explore {
  position: relative;
  height: 510px;
  background-position: top;
  background-size: cover;
  padding: {
    left: 16px;
    right: 16px;
  }
  .explore {
    position: relative;
    z-index: 1;
    color: white;
    height: 100%;
    .explore-content {
      width: 35%;
      font-family: $font_san-francisco;
      @media screen and (max-width: 767px) {
        padding: 0 16px;
        width: 93%;
      }
      .title {
        font-size: 56px;
        line-height: 75px;
      }
      .desc {
        margin-top: 30px;
        font-weight: 300;
        font-size: 14px;
        line-height: 1.857;
      }
      .link {
        margin-top: 70px;
        a {
          font-family: $font_roboto;
          font-size: 13.5px;
          padding: 10px 22px;
          display: inline-block;
          border-width: 2px;
          border-color: rgb(255, 255, 255);
          border-style: solid;
          border-radius: 30px;
          font-weight: 400;
        }
      }
    }
    .explore-previews {
      position: absolute;
      right: 110px;
      bottom: -70px;
      width: 50%;
      @media screen and (max-width: 767px) {
        width: 100%;
      }
      .slick-list {
        overflow: hidden;
        .slick-slide {
          transition: 0.4s ease-out;
          transform: scale(0);
          &.slick-current.slick-active {
            transform: scale(0.96);
            & + .slick-slide {
              transform: scale(0.6);
              div {
                width: 100%;
                display: inline-block;
                margin-left: -44px;
                margin-top: -30px;
              }
            }
          }
          img {
            width: 100%;
          }
          &.scale-out {
            transform: scale(0) !important;
          }
          &.scale-in {
            transform: scale(0.96) !important;
          }
        }
      }
      .navs {
        position: absolute;
        right: -119px;
        bottom: 80px;
        font-size: 35px;
        span {
          cursor: pointer;
          opacity: 0.8;
          transition: 0.4s;
          &:hover {
            opacity: 1;
          }
        }
      }
    }
  }
  .wrapper {
    height: 100%;
  }
  &:after {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.6);
    z-index: 0;
  }
}
/* ... */

